add register api
