# src/main/java/fitspace/fitspace_sports_venue_booking_website_backend/model/LoginUserRequest.java
@@ -1,0 +1,24 @@
+package fitspace.fitspace_sports_venue_booking_website_backend.model;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class LoginUserRequest {
+
+    @NotBlank
+    @Size(max = 100)
+    private String email;
+
+    @NotBlank
+    @Size(min = 8, max = 100)
+    private String password;
+}
