# src/main/java/fitspace/fitspace_sports_venue_booking_website_backend/model/TokenResponse.java
@@ -1,0 +1,17 @@
+package fitspace.fitspace_sports_venue_booking_website_backend.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class TokenResponse {
+
+    private String token;
+
+    private Long expiredAt;
+}
